# prop-viz

./: .gitignore  README.md  pyproject.toml
phalanx/: __main__.py  config.py
phalanx/database/: database.py
phalanx/email_sender/: config.py  email_generator.py  email_sender.py
phalanx/models/: email.py  lead.py
phalanx/scrapers/: config.py  gelbeseiten.py  lead_scraper.py
