[project]
name = "phalanx"
version = "0.1.0"
description = "an AI-powered cold outreach system for the German market, specifically for identifying potential leads, personalizing outreach emails, and automating the process while maintaining scalability"
authors = [
    {name = "Adebayo Stephen"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
